Prevent default behavior touch events on mobile browsers

--- a/main.css
+++ b/main.css
@@ -8,7 +8,6 @@ body {
   font-size: 2rem;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 auto;
-  position: relative;
   background-color: whitesmoke;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
